adjusted div and deleted some just did some code alignment fixes

--- a/style.css
+++ b/style.css
@@ -66,11 +66,6 @@ button {
     padding: 5px 30px;
 }
 
-.picture {
-    display: flex;
-    justify-content: center;
-}
-
 .image1 {
     width: 500px;
 }
@@ -124,21 +119,30 @@ button {
 
 .action {
     background-color: #3882f6;
-    width: 480px;
     border-radius: 5px;
-    display: flex;
     padding: 16px;
+    
 }
 
 .header-call {
     font-weight: bold;
-    font-size: 18px;
+    font-size: 24px;
     color: #f9faf8;
+    margin: 0;
 }
+
+.form {
+    color: #f9faf8;
+    font-size: 18px;
+    margin: 0;
+}
+
+
 .footer {
     background-color: #1f2937;
     font-size: 18px;
     color: #e5e7eb;
+    padding: 50px 0px;
     display: flex;
     justify-content: center;
     align-items: center;
